--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -184,10 +184,22 @@
         "drive.mount('/content/.drive')"
       ],
       "metadata": {
-        "id": "ilEZ-bE2VybW"
+        "id": "ilEZ-bE2VybW",
+        "outputId": "f7345839-0db4-494e-e3dd-4232f44473dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/.drive; to attempt to forcibly remount, call drive.mount(\"/content/.drive\", force_remount=True).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -239,10 +251,30 @@
         "\n"
       ],
       "metadata": {
-        "id": "W8dQFI5QYCFa"
+        "id": "W8dQFI5QYCFa",
+        "outputId": "ec149ae8-01c1-47e7-d21b-5ef540ccd9bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ln: failed to create symbolic link '/content/buckets/b1/labo1': File exists\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -261,10 +293,41 @@
         "gc(full=TRUE, verbose=FALSE) # garbage collection"
       ],
       "metadata": {
-        "id": "oZG_4br6szlT"
+        "id": "oZG_4br6szlT",
+        "outputId": "1cce0ac0-dfc8-4726-f5b4-ffa9c5fd8359",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<table class=\"dataframe\">\n",
+              "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+              "<thead>\n",
+              "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 656590</td><td>35.1</td><td>1454460</td><td>77.7</td><td>1321652</td><td>70.6</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1219461</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975127</td><td>15.1</td></tr>\n",
+              "</tbody>\n",
+              "</table>\n"
+            ],
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  656590 | 35.1 | 1454460 | 77.7 | 1321652 | 70.6 |\n| Vcells | 1219461 |  9.4 | 8388608 | 64.0 | 1975127 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  656590 & 35.1 & 1454460 & 77.7 & 1321652 & 70.6\\\\\n\tVcells & 1219461 &  9.4 & 8388608 & 64.0 & 1975127 & 15.1\\\\\n\\end{tabular}\n",
+            "text/plain": [
+              "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+              "Ncells  656590 35.1 1454460    77.7 1321652  70.6\n",
+              "Vcells 1219461  9.4 8388608    64.0 1975127  15.1"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -279,7 +342,7 @@
       "metadata": {
         "id": "JO-12d7YHkWy"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -296,7 +359,7 @@
       "source": [
         "PARAM <- list()\n",
         "# reemplazar por su primer semilla\n",
-        "PARAM$semilla_primigenia <- 102191\n",
+        "PARAM$semilla_primigenia <- 191717\n",
         "PARAM$qsemillas <- 1\n",
         "\n",
         "PARAM$training_pct <- 70L  # entre  1L y 99L\n",
@@ -307,7 +370,7 @@
       "metadata": {
         "id": "Vt5fC6bWHu5r"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -333,7 +396,7 @@
       "metadata": {
         "id": "Z1dchsrWH4MD"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -389,7 +452,7 @@
       "metadata": {
         "id": "xsHwS1CzIA70"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -412,7 +475,7 @@
       "metadata": {
         "id": "BvBVOuhqIEjD"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -428,7 +491,7 @@
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -443,7 +506,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -459,7 +522,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -484,10 +547,30 @@
         "nrow( tb_grid_search_detalle )"
       ],
       "metadata": {
-        "id": "xxCAwIKyIaTl"
+        "id": "xxCAwIKyIaTl",
+        "outputId": "dcd18661-bd91-448f-c310-650d7fcfb5d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "0"
+            ],
+            "text/markdown": "0",
+            "text/latex": "0",
+            "text/plain": [
+              "[1] 0"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -510,27 +593,35 @@
         "  for (vmin_split in c(1000, 800, 600, 400, 200, 100, 50, 20, 10)) {\n",
         "    # notar como se agrega\n",
         "\n",
-        "    iter <- iter + 1\n",
-        "    cat( iter, \" \" )\n",
-        "    flush.console()\n",
-        "    if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
+        "    for(vcp in c(-1, -0.7, -0.5, -0.1, 0, 0.2)) {\n",
+        "      for (vmin_bucket in c(5, 10, 20, 50, 100)) {\n",
         "\n",
-        "    # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
-        "    param_basicos <- list(\n",
-        "      \"cp\" = -0.5, # complejidad minima\n",
-        "      \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
-        "      \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
-        "      \"minbucket\" = 5 # minima cantidad de registros en una hoja\n",
-        "    )\n",
         "\n",
-        "    # Un solo llamado, con la semilla 17\n",
-        "    ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "        iter <- iter + 1\n",
+        "        cat( iter, \" \" )\n",
+        "        flush.console()\n",
+        "        if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
         "\n",
-        "    # agrego a la tabla\n",
-        "    tb_grid_search_detalle <- rbindlist(\n",
-        "      list( tb_grid_search_detalle,\n",
-        "            rbindlist(ganancias) )\n",
-        "    )\n",
+        "        # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
+        "        param_basicos <- list(\n",
+        "          #\"cp\" = -0.5, # complejidad minima\n",
+        "          \"cp\" = vcp, # complejidad minima\n",
+        "          \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
+        "          \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
+        "          #\"minbucket\" = 5 # minima cantidad de registros en una hoja\n",
+        "          \"minbucket\" = vmin_bucket # minima cantidad de registros en una hoja\n",
+        "        )\n",
+        "\n",
+        "        # Un solo llamado, con la semilla 17\n",
+        "        ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "\n",
+        "        # agrego a la tabla\n",
+        "        tb_grid_search_detalle <- rbindlist(\n",
+        "          list( tb_grid_search_detalle,\n",
+        "                rbindlist(ganancias) )\n",
+        "        )\n",
+        "      }\n",
+        "    }\n",
         "\n",
         "  }\n",
         "\n",
@@ -541,10 +632,22 @@
         "}\n"
       ],
       "metadata": {
-        "id": "ipLHm3STIfmb"
+        "id": "ipLHm3STIfmb",
+        "outputId": "d92559f5-c8a6-4c55-bb8c-ce37e5ee9e04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1  "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
