--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -334,10 +334,10 @@
       ],
       "metadata": {
         "id": "JO-12d7YHkWy",
-        "outputId": "fbb7741f-8d81-4885-d406-3b1415eb8876",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fbb7741f-8d81-4885-d406-3b1415eb8876"
       },
       "execution_count": 2,
       "outputs": [
@@ -503,7 +503,7 @@
         "# carpeta de trabajo\n",
         "# por fabor cambiar numero de experimento si se cambia el loop principal\n",
         "setwd(\"/content/buckets/b1/exp\")\n",
-        "experimento <- \"HT2900\"\n",
+        "experimento <- \"HT0210_0\"\n",
         "dir.create(experimento, showWarnings=FALSE)\n",
         "setwd( paste0(\"/content/buckets/b1/exp/\", experimento ))"
       ],
