--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -190,7 +190,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +293,7 @@
           "height": 130
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -339,7 +339,7 @@
         },
         "outputId": "fbb7741f-8d81-4885-d406-3b1415eb8876"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +389,7 @@
       "metadata": {
         "id": "Vt5fC6bWHu5r"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "Z1dchsrWH4MD"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -471,7 +471,7 @@
       "metadata": {
         "id": "xsHwS1CzIA70"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -494,7 +494,7 @@
       "metadata": {
         "id": "BvBVOuhqIEjD"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,14 +503,14 @@
         "# carpeta de trabajo\n",
         "# por fabor cambiar numero de experimento si se cambia el loop principal\n",
         "setwd(\"/content/buckets/b1/exp\")\n",
-        "experimento <- \"HT0210_0\"\n",
+        "experimento <- \"HT0210_1\"\n",
         "dir.create(experimento, showWarnings=FALSE)\n",
         "setwd( paste0(\"/content/buckets/b1/exp/\", experimento ))"
       ],
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -573,7 +573,7 @@
           "height": 34
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -735,6 +735,82 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## CAMBIO estrategia de busqueda GridSearch\n",
+        "## en base a analisis anteriores ..\n",
+        "## dejo cp en -0.5\n",
+        "## max_depth de 8 a 10\n",
+        "## min_split entre 500 y 1100, en pasos de 50\n",
+        "## min_bucket\n",
+        "\n",
+        "\n",
+        "maxdepth_seq <- c(8,9,10)\n",
+        "minsplit_seq <- seq(500, 1100, 50)\n",
+        "minbucket_seq <- seq(5, 30, 5)\n",
+        "\n",
+        "dataset_train_len = round(nrow(dataset) * (PARAM$training_pct/ 100))\n",
+        "\n",
+        "# itero por los loops anidados para cada hiperparametro\n",
+        "iter <- 0\n",
+        "\n",
+        "vcp <- -0.5\n",
+        "\n",
+        "for (vmax_depth in maxdepth_seq) {\n",
+        "  for (vmin_split in minsplit_seq) {\n",
+        "    for (vmin_bucket in minbucket_seq) {\n",
+        "\n",
+        "      iter <- iter + 1\n",
+        "      cat( iter, \" \" )\n",
+        "      flush.console()\n",
+        "      if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
+        "\n",
+        "      # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
+        "      param_basicos <- list(\n",
+        "        \"cp\" = vcp, # complejidad minima\n",
+        "        \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
+        "        \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
+        "        \"minbucket\" = vmin_bucket # minima cantidad de registros en una hoja\n",
+        "      )\n",
+        "\n",
+        "      # Un solo llamado, con la semilla 17\n",
+        "      ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "\n",
+        "      # agrego a la tabla\n",
+        "      tb_grid_search_detalle <- rbindlist(\n",
+        "        list( tb_grid_search_detalle,\n",
+        "              rbindlist(ganancias) )\n",
+        "      )\n",
+        "\n",
+        "    }\n",
+        "\n",
+        "  }\n",
+        "\n",
+        "  # grabo cada vez TODA la tabla en el loop mas externo\n",
+        "  fwrite( tb_grid_search_detalle,\n",
+        "          file = \"gridsearch_detalle.txt\",\n",
+        "          sep = \"\\t\" )\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "U__C8pfPeTOW",
+        "outputId": "09252eba-ed43-47b0-a05c-37da0bf0667f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  130  131  132  133  134  135  136  137  138  139  140  141  142  143  144  145  146  147  148  149  150  151  152  153  154  155  156  157  158  159  160  161  162  163  164  165  166  167  168  169  170  171  172  173  174  175  176  177  178  179  180  181  182  183  184  185  186  187  188  189  190  191  192  193  194  195  196  197  198  199  200  201  202  203  204  205  206  207  208  209  210  211  212  213  214  215  216  217  218  219  220  221  222  223  224  225  226  227  228  229  230  231  232  233  234  "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
