--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -185,7 +185,7 @@
       ],
       "metadata": {
         "id": "ilEZ-bE2VybW",
-        "outputId": "cad1d880-657c-4b2d-d084-2efbf4e09818",
+        "outputId": "730da364-4d5c-4296-fef6-3005e7f5c893",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -252,7 +252,7 @@
       ],
       "metadata": {
         "id": "W8dQFI5QYCFa",
-        "outputId": "4410105a-5470-410a-d67c-ba78724fd1fe",
+        "outputId": "57069a53-2817-4e95-b7fd-84d8a57a4c72",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -287,7 +287,7 @@
       ],
       "metadata": {
         "id": "oZG_4br6szlT",
-        "outputId": "10f75d39-1a19-4725-90e6-e9e5cf4845a5",
+        "outputId": "e540e859-c62d-4621-c33a-97d01eb06fb2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -305,16 +305,16 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 656590</td><td>35.1</td><td>1454451</td><td>77.7</td><td>1321657</td><td>70.6</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 656590</td><td>35.1</td><td>1454457</td><td>77.7</td><td>1321661</td><td>70.6</td></tr>\n",
               "\t<tr><th scope=row>Vcells</th><td>1219461</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975127</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  656590 | 35.1 | 1454451 | 77.7 | 1321657 | 70.6 |\n| Vcells | 1219461 |  9.4 | 8388608 | 64.0 | 1975127 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  656590 & 35.1 & 1454451 & 77.7 & 1321657 & 70.6\\\\\n\tVcells & 1219461 &  9.4 & 8388608 & 64.0 & 1975127 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  656590 | 35.1 | 1454457 | 77.7 | 1321661 | 70.6 |\n| Vcells | 1219461 |  9.4 | 8388608 | 64.0 | 1975127 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  656590 & 35.1 & 1454457 & 77.7 & 1321661 & 70.6\\\\\n\tVcells & 1219461 &  9.4 & 8388608 & 64.0 & 1975127 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  656590 35.1 1454451    77.7 1321657  70.6\n",
+              "Ncells  656590 35.1 1454457    77.7 1321661  70.6\n",
               "Vcells 1219461  9.4 8388608    64.0 1975127  15.1"
             ]
           },
@@ -337,7 +337,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e0e45a5c-9cbf-430d-8b71-da25534260ff"
+        "outputId": "2b2d9a47-6a99-4df1-81a8-d1f31524eb44"
       },
       "execution_count": 2,
       "outputs": [
@@ -503,7 +503,7 @@
         "# carpeta de trabajo\n",
         "# por fabor cambiar numero de experimento si se cambia el loop principal\n",
         "setwd(\"/content/buckets/b1/exp\")\n",
-        "experimento <- \"HT0210_1\"\n",
+        "experimento <- \"HT0210_2\"\n",
         "dir.create(experimento, showWarnings=FALSE)\n",
         "setwd( paste0(\"/content/buckets/b1/exp/\", experimento ))"
       ],
@@ -567,7 +567,7 @@
       ],
       "metadata": {
         "id": "xxCAwIKyIaTl",
-        "outputId": "dca4a4e0-b785-454d-bd06-a9ec3fe26962",
+        "outputId": "95165f94-744a-401a-99bf-f3864746c751",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -659,64 +659,64 @@
     {
       "cell_type": "code",
       "source": [
-        "## CAMBIO estrategia de busqueda GridSearch\n",
-        "## Primero por cp , max_depth\n",
-        "## Luego por min_split / min_bucket\n",
+        "# ## CAMBIO estrategia de busqueda GridSearch\n",
+        "# ## Primero por cp , max_depth\n",
+        "# ## Luego por min_split / min_bucket\n",
         "\n",
-        "# Genera vector con valores cp en una escala logaritmic\n",
-        "from_cp <- 0.01\n",
-        "to_cp <- 0.9\n",
-        "num_cp <- 20\n",
+        "# # Genera vector con valores cp en una escala logaritmic\n",
+        "# from_cp <- 0.01\n",
+        "# to_cp <- 0.9\n",
+        "# num_cp <- 20\n",
         "\n",
-        "cp_seq <- exp(\n",
-        "  seq( log(from_val), log(to_val), length.out = num_points )\n",
-        ") * -1\n",
+        "# cp_seq <- exp(\n",
+        "#   seq( log(from_val), log(to_val), length.out = num_points )\n",
+        "# ) * -1\n",
         "\n",
         "\n",
-        "#min split en 0.5 y 2% del tamano del dataset de train\n",
-        "dataset_train_len = round(nrow(dataset) * (PARAM$training_pct/ 100))\n",
-        "vmin_split_seq <- c( round(dataset_train_len  * 0.02), round(dataset_train_len  * 0.005) )\n",
+        "# #min split en 0.5 y 2% del tamano del dataset de train\n",
+        "# dataset_train_len = round(nrow(dataset) * (PARAM$training_pct/ 100))\n",
+        "# vmin_split_seq <- c( round(dataset_train_len  * 0.02), round(dataset_train_len  * 0.005) )\n",
         "\n",
-        "# itero por los loops anidados para cada hiperparametro\n",
-        "iter <- 0\n",
+        "# # itero por los loops anidados para cada hiperparametro\n",
+        "# iter <- 0\n",
         "\n",
-        "#for (vmax_depth in c(4, 6, 8, 10, 12, 14)) {\n",
-        "  #for (vmin_split in c(1000, 800, 600, 400, 200, 100, 50, 20, 10)) {\n",
+        "# #for (vmax_depth in c(4, 6, 8, 10, 12, 14)) {\n",
+        "#   #for (vmin_split in c(1000, 800, 600, 400, 200, 100, 50, 20, 10)) {\n",
         "\n",
-        "for (vcp in cp_seq) {\n",
-        "  for (vmax_depth in c(4, 6, 8, 10, 12, 14, 15, 16)) {\n",
-        "    for (vmin_split in vmin_split_seq) {\n",
-        "      iter <- iter + 1\n",
-        "      cat( iter, \" \" )\n",
-        "      flush.console()\n",
-        "      if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
+        "# for (vcp in cp_seq) {\n",
+        "#   for (vmax_depth in c(4, 6, 8, 10, 12, 14, 15, 16)) {\n",
+        "#     for (vmin_split in vmin_split_seq) {\n",
+        "#       iter <- iter + 1\n",
+        "#       cat( iter, \" \" )\n",
+        "#       flush.console()\n",
+        "#       if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
         "\n",
-        "      # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
-        "      param_basicos <- list(\n",
-        "        \"cp\" = vcp, # complejidad minima\n",
-        "        \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
-        "        \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
-        "        \"minbucket\" = round(vmin_split/3) # minima cantidad de registros en una hoja\n",
-        "      )\n",
+        "#       # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
+        "#       param_basicos <- list(\n",
+        "#         \"cp\" = vcp, # complejidad minima\n",
+        "#         \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
+        "#         \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
+        "#         \"minbucket\" = round(vmin_split/3) # minima cantidad de registros en una hoja\n",
+        "#       )\n",
         "\n",
-        "      # Un solo llamado, con la semilla 17\n",
-        "      ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "#       # Un solo llamado, con la semilla 17\n",
+        "#       ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
         "\n",
-        "      # agrego a la tabla\n",
-        "      tb_grid_search_detalle <- rbindlist(\n",
-        "        list( tb_grid_search_detalle,\n",
-        "              rbindlist(ganancias) )\n",
-        "      )\n",
+        "#       # agrego a la tabla\n",
+        "#       tb_grid_search_detalle <- rbindlist(\n",
+        "#         list( tb_grid_search_detalle,\n",
+        "#               rbindlist(ganancias) )\n",
+        "#       )\n",
         "\n",
-        "    }\n",
+        "#     }\n",
         "\n",
-        "  }\n",
+        "#   }\n",
         "\n",
-        "  # grabo cada vez TODA la tabla en el loop mas externo\n",
-        "  fwrite( tb_grid_search_detalle,\n",
-        "          file = \"gridsearch_detalle.txt\",\n",
-        "          sep = \"\\t\" )\n",
-        "}"
+        "#   # grabo cada vez TODA la tabla en el loop mas externo\n",
+        "#   fwrite( tb_grid_search_detalle,\n",
+        "#           file = \"gridsearch_detalle.txt\",\n",
+        "#           sep = \"\\t\" )\n",
+        "# }"
       ],
       "metadata": {
         "id": "aK59cRaksScD"
@@ -735,9 +735,13 @@
         "## min_bucket\n",
         "\n",
         "\n",
-        "maxdepth_seq <- c(8,9,10)\n",
-        "minsplit_seq <- seq(500, 1100, 50)\n",
-        "minbucket_seq <- seq(5, 30, 5)\n",
+        "# maxdepth_seq <- c(8,9,10)\n",
+        "# minsplit_seq <- seq(500, 1100, 50)\n",
+        "# minbucket_seq <- seq(5, 30, 5)\n",
+        "\n",
+        "maxdepth_seq <- c(9,10,11)\n",
+        "minsplit_seq <- seq(700, 1100, 25)\n",
+        "minbucket_seq <- seq(20, 40, 2)\n",
         "\n",
         "dataset_train_len = round(nrow(dataset) * (PARAM$training_pct/ 100))\n",
         "\n",
@@ -787,7 +791,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U__C8pfPeTOW",
-        "outputId": "71de0bea-c2f9-4615-d167-62accbff605f"
+        "outputId": "48de63f3-8859-4755-a424-f89557bfcb6a"
       },
       "execution_count": null,
       "outputs": [
@@ -795,7 +799,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1  2  3  "
+            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  130  131  132  133  134  135  136  137  138  139  140  141  142  143  144  145  146  147  148  149  150  151  152  153  154  155  156  157  158  159  160  161  162  163  164  "
           ]
         }
       ]
