Reintento con mas semillas... solo valores negativos de cp, y rango min_split reducido

--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -185,7 +185,7 @@
       ],
       "metadata": {
         "id": "ilEZ-bE2VybW",
-        "outputId": "f2629bba-e0df-4a0c-e4f0-8ad9b948a9b4",
+        "outputId": "89f06bdc-bb3a-4fba-f044-43d03c160c9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -252,7 +252,7 @@
       ],
       "metadata": {
         "id": "W8dQFI5QYCFa",
-        "outputId": "29c5d173-d9a5-4838-f6ea-d9846b14d1f3",
+        "outputId": "efc2f321-856b-4c44-94e0-9ac709c39612",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -287,7 +287,7 @@
       ],
       "metadata": {
         "id": "oZG_4br6szlT",
-        "outputId": "290ab7c5-9596-407f-b76b-a50351cbaaf4",
+        "outputId": "b8d0d694-369c-433d-e8c5-faa86c551a18",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -305,17 +305,17 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 657245</td><td>35.2</td><td>1454465</td><td>77.7</td><td>1326121</td><td>70.9</td></tr>\n",
-              "\t<tr><th scope=row>Vcells</th><td>1220272</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975127</td><td>15.1</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454465</td><td>77.7</td><td>1326123</td><td>70.9</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1220271</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657245 | 35.2 | 1454465 | 77.7 | 1326121 | 70.9 |\n| Vcells | 1220272 |  9.4 | 8388608 | 64.0 | 1975127 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657245 & 35.2 & 1454465 & 77.7 & 1326121 & 70.9\\\\\n\tVcells & 1220272 &  9.4 & 8388608 & 64.0 & 1975127 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454465 | 77.7 | 1326123 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454465 & 77.7 & 1326123 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  657245 35.2 1454465    77.7 1326121  70.9\n",
-              "Vcells 1220272  9.4 8388608    64.0 1975127  15.1"
+              "Ncells  657244 35.2 1454465    77.7 1326123  70.9\n",
+              "Vcells 1220271  9.4 8388608    64.0 1975128  15.1"
             ]
           },
           "metadata": {}
@@ -337,7 +337,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "50b2a22b-c56e-4d65-9fe8-9edd2f226c47"
+        "outputId": "71c6cca1-d337-4306-e2d9-d04d109578e2"
       },
       "execution_count": 2,
       "outputs": [
@@ -379,7 +379,7 @@
         "PARAM <- list()\n",
         "# reemplazar por su primer semilla\n",
         "PARAM$semilla_primigenia <- 191717\n",
-        "PARAM$qsemillas <- 1\n",
+        "PARAM$qsemillas <- 5\n",
         "\n",
         "PARAM$training_pct <- 70L  # entre  1L y 99L\n",
         "\n",
@@ -503,14 +503,14 @@
         "# carpeta de trabajo\n",
         "# por fabor cambiar numero de experimento si se cambia el loop principal\n",
         "setwd(\"/content/buckets/b1/exp\")\n",
-        "experimento <- \"HT0210_4\"\n",
+        "experimento <- \"HT0211_1\"\n",
         "dir.create(experimento, showWarnings=FALSE)\n",
         "setwd( paste0(\"/content/buckets/b1/exp/\", experimento ))"
       ],
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -567,13 +567,13 @@
       ],
       "metadata": {
         "id": "xxCAwIKyIaTl",
-        "outputId": "5313426e-dad4-49cd-bd9b-8032935e9e98",
+        "outputId": "0c8c9973-513a-4332-db70-770e340a7936",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -743,54 +743,54 @@
         "# minsplit_seq <- seq(700, 1100, 25)\n",
         "# minbucket_seq <- seq(20, 40, 2)\n",
         "\n",
-        "maxdepth_seq <- c(10)\n",
-        "minsplit_seq <- seq(750, 780, 1)\n",
-        "minbucket_seq <- seq(40, 42)\n",
+        "# maxdepth_seq <- c(10)\n",
+        "# minsplit_seq <- seq(750, 780, 1)\n",
+        "# minbucket_seq <- seq(40, 42)\n",
         "\n",
-        "dataset_train_len = round(nrow(dataset) * (PARAM$training_pct/ 100))\n",
+        "# dataset_train_len = round(nrow(dataset) * (PARAM$training_pct/ 100))\n",
         "\n",
-        "# itero por los loops anidados para cada hiperparametro\n",
-        "iter <- 0\n",
+        "# # itero por los loops anidados para cada hiperparametro\n",
+        "# iter <- 0\n",
         "\n",
-        "vcp <- -0.5\n",
+        "# vcp <- -0.5\n",
         "\n",
-        "for (vmax_depth in maxdepth_seq) {\n",
-        "  for (vmin_split in minsplit_seq) {\n",
-        "    for (vmin_bucket in minbucket_seq) {\n",
+        "# for (vmax_depth in maxdepth_seq) {\n",
+        "#   for (vmin_split in minsplit_seq) {\n",
+        "#     for (vmin_bucket in minbucket_seq) {\n",
         "\n",
-        "      iter <- iter + 1\n",
-        "      cat( iter, \" \" )\n",
-        "      flush.console()\n",
-        "      if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
+        "#       iter <- iter + 1\n",
+        "#       cat( iter, \" \" )\n",
+        "#       flush.console()\n",
+        "#       if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
         "\n",
-        "      # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
-        "      param_basicos <- list(\n",
-        "        \"cp\" = vcp, # complejidad minima\n",
-        "        \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
-        "        \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
-        "        \"minbucket\" = vmin_bucket # minima cantidad de registros en una hoja\n",
-        "      )\n",
+        "#       # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
+        "#       param_basicos <- list(\n",
+        "#         \"cp\" = vcp, # complejidad minima\n",
+        "#         \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
+        "#         \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
+        "#         \"minbucket\" = vmin_bucket # minima cantidad de registros en una hoja\n",
+        "#       )\n",
         "\n",
-        "      # Un solo llamado, con la semilla 17\n",
-        "      ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "#       # Un solo llamado, con la semilla 17\n",
+        "#       ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
         "\n",
-        "      # agrego a la tabla\n",
-        "      tb_grid_search_detalle <- rbindlist(\n",
-        "        list( tb_grid_search_detalle,\n",
-        "              rbindlist(ganancias) )\n",
-        "      )\n",
+        "#       # agrego a la tabla\n",
+        "#       tb_grid_search_detalle <- rbindlist(\n",
+        "#         list( tb_grid_search_detalle,\n",
+        "#               rbindlist(ganancias) )\n",
+        "#       )\n",
         "\n",
-        "    }\n",
-        "    fwrite( tb_grid_search_detalle,\n",
-        "          file = \"gridsearch_detalle.txt\",\n",
-        "          sep = \"\\t\" )\n",
+        "#     }\n",
+        "#     fwrite( tb_grid_search_detalle,\n",
+        "#           file = \"gridsearch_detalle.txt\",\n",
+        "#           sep = \"\\t\" )\n",
         "\n",
-        "  }\n",
-        "  # grabo cada vez TODA la tabla en el loop mas externo\n",
-        "  fwrite( tb_grid_search_detalle,\n",
-        "          file = \"gridsearch_detalle.txt\",\n",
-        "          sep = \"\\t\" )\n",
-        "}"
+        "#   }\n",
+        "#   # grabo cada vez TODA la tabla en el loop mas externo\n",
+        "#   fwrite( tb_grid_search_detalle,\n",
+        "#           file = \"gridsearch_detalle.txt\",\n",
+        "#           sep = \"\\t\" )\n",
+        "# }"
       ],
       "metadata": {
         "colab": {
@@ -799,13 +799,84 @@
         "id": "U__C8pfPeTOW",
         "outputId": "a1e199a0-c425-4d88-9744-927199b301ff"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#\n",
+        "# Intento nuevamente, dos cp\n",
+        "#\n",
+        "\n",
+        "# itero por los loops anidados para cada hiperparametro\n",
+        "iter <- 0\n",
+        "\n",
+        "for (vmax_depth in c(4, 5, 6, 7, 8, 10, 12, 14)) {\n",
+        "  for (vmin_split in seq(10, 1000, 50)) {\n",
+        "\n",
+        "    for(vcp in c(-1, -0.5)) {\n",
+        "      for (vmin_bucket in c(round(vmin_split/2), round(vmin_split/2), round(vmin_split/2), round(vmin_split/10))) {\n",
+        "\n",
+        "\n",
+        "        iter <- iter + 1\n",
+        "        cat( iter, \" \" )\n",
+        "        flush.console()\n",
+        "        if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
+        "\n",
+        "        # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
+        "        param_basicos <- list(\n",
+        "          \"cp\" = vcp, # complejidad minima\n",
+        "          \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
+        "          \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
+        "          \"minbucket\" = vmin_bucket # minima cantidad de registros en una hoja\n",
+        "        )\n",
+        "\n",
+        "        # Un solo llamado, con la semilla 17\n",
+        "        ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "\n",
+        "        # agrego a la tabla\n",
+        "        tb_grid_search_detalle <- rbindlist(\n",
+        "          list( tb_grid_search_detalle,\n",
+        "                rbindlist(ganancias) )\n",
+        "        )\n",
+        "\n",
+        "        fwrite( tb_grid_search_detalle,\n",
+        "        file = \"gridsearch_detalle.txt\",\n",
+        "        sep = \"\\t\" )\n",
+        "      }\n",
+        "    }\n",
+        "\n",
+        "  }\n",
+        "\n",
+        "  # grabo cada vez TODA la tabla en el loop mas externo\n",
+        "  fwrite( tb_grid_search_detalle,\n",
+        "          file = \"gridsearch_detalle.txt\",\n",
+        "          sep = \"\\t\" )\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "nMktXlxcue0z",
+        "outputId": "97bef33f-b6b3-4268-e6f7-77aaacb7f6f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1  "
           ]
         }
       ]
@@ -821,7 +892,7 @@
       "metadata": {
         "id": "WZaSqYBxiDFu"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
