--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -185,7 +185,7 @@
       ],
       "metadata": {
         "id": "ilEZ-bE2VybW",
-        "outputId": "89f06bdc-bb3a-4fba-f044-43d03c160c9f",
+        "outputId": "293d64b4-bad7-41ce-93cb-1252ae2f7e32",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -252,7 +252,7 @@
       ],
       "metadata": {
         "id": "W8dQFI5QYCFa",
-        "outputId": "efc2f321-856b-4c44-94e0-9ac709c39612",
+        "outputId": "b9d6be5c-67b6-45d2-a008-db8e1cef1759",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -287,7 +287,7 @@
       ],
       "metadata": {
         "id": "oZG_4br6szlT",
-        "outputId": "b8d0d694-369c-433d-e8c5-faa86c551a18",
+        "outputId": "bf40cac8-446d-4211-a920-5a8452ce1e76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -305,16 +305,16 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454465</td><td>77.7</td><td>1326123</td><td>70.9</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454451</td><td>77.7</td><td>1326120</td><td>70.9</td></tr>\n",
               "\t<tr><th scope=row>Vcells</th><td>1220271</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454465 | 77.7 | 1326123 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454465 & 77.7 & 1326123 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454451 | 77.7 | 1326120 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454451 & 77.7 & 1326120 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  657244 35.2 1454465    77.7 1326123  70.9\n",
+              "Ncells  657244 35.2 1454451    77.7 1326120  70.9\n",
               "Vcells 1220271  9.4 8388608    64.0 1975128  15.1"
             ]
           },
@@ -337,7 +337,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "71c6cca1-d337-4306-e2d9-d04d109578e2"
+        "outputId": "b22a53bb-453c-4ac9-e729-c87f9bd21d9d"
       },
       "execution_count": 2,
       "outputs": [
@@ -510,7 +510,7 @@
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -567,24 +567,24 @@
       ],
       "metadata": {
         "id": "xxCAwIKyIaTl",
-        "outputId": "0c8c9973-513a-4332-db70-770e340a7936",
+        "outputId": "3956c50b-1791-4fda-9579-5681b2d0f4ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "0"
+              "1195"
             ],
-            "text/markdown": "0",
-            "text/latex": "0",
+            "text/markdown": "1195",
+            "text/latex": "1195",
             "text/plain": [
-              "[1] 0"
+              "[1] 1195"
             ]
           },
           "metadata": {}
@@ -818,59 +818,152 @@
         "#\n",
         "\n",
         "# itero por los loops anidados para cada hiperparametro\n",
-        "iter <- 0\n",
+        "# iter <- 0\n",
         "\n",
-        "for (vmax_depth in c(4, 5, 6, 7, 8, 10, 12, 14)) {\n",
-        "  for (vmin_split in seq(10, 1000, 50)) {\n",
+        "# for (vmax_depth in c(4, 5, 6, 7, 8, 10, 12, 14)) {\n",
+        "#   for (vmin_split in seq(10, 1000, 50)) {\n",
         "\n",
-        "    for(vcp in c(-1, -0.5)) {\n",
-        "      for (vmin_bucket in c(round(vmin_split/2), round(vmin_split/2), round(vmin_split/2), round(vmin_split/10))) {\n",
+        "#     for(vcp in c(-1, -0.5)) {\n",
+        "#       for (vmin_bucket in c(round(vmin_split/2), round(vmin_split/2), round(vmin_split/2), round(vmin_split/10))) {\n",
         "\n",
         "\n",
-        "        iter <- iter + 1\n",
-        "        cat( iter, \" \" )\n",
-        "        flush.console()\n",
-        "        if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
+        "#         iter <- iter + 1\n",
+        "#         cat( iter, \" \" )\n",
+        "#         flush.console()\n",
+        "#         if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
         "\n",
-        "        # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
-        "        param_basicos <- list(\n",
-        "          \"cp\" = vcp, # complejidad minima\n",
-        "          \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
-        "          \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
-        "          \"minbucket\" = vmin_bucket # minima cantidad de registros en una hoja\n",
-        "        )\n",
+        "#         # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
+        "#         param_basicos <- list(\n",
+        "#           \"cp\" = vcp, # complejidad minima\n",
+        "#           \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
+        "#           \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
+        "#           \"minbucket\" = vmin_bucket # minima cantidad de registros en una hoja\n",
+        "#         )\n",
         "\n",
-        "        # Un solo llamado, con la semilla 17\n",
-        "        ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "#         # Un solo llamado, con la semilla 17\n",
+        "#         ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
         "\n",
-        "        # agrego a la tabla\n",
-        "        tb_grid_search_detalle <- rbindlist(\n",
-        "          list( tb_grid_search_detalle,\n",
-        "                rbindlist(ganancias) )\n",
-        "        )\n",
+        "#         # agrego a la tabla\n",
+        "#         tb_grid_search_detalle <- rbindlist(\n",
+        "#           list( tb_grid_search_detalle,\n",
+        "#                 rbindlist(ganancias) )\n",
+        "#         )\n",
         "\n",
-        "        fwrite( tb_grid_search_detalle,\n",
-        "        file = \"gridsearch_detalle.txt\",\n",
-        "        sep = \"\\t\" )\n",
-        "      }\n",
-        "    }\n",
+        "#         fwrite( tb_grid_search_detalle,\n",
+        "#         file = \"gridsearch_detalle.txt\",\n",
+        "#         sep = \"\\t\" )\n",
+        "#       }\n",
+        "#     }\n",
         "\n",
-        "  }\n",
+        "#   }\n",
         "\n",
-        "  # grabo cada vez TODA la tabla en el loop mas externo\n",
-        "  fwrite( tb_grid_search_detalle,\n",
-        "          file = \"gridsearch_detalle.txt\",\n",
-        "          sep = \"\\t\" )\n",
-        "}"
+        "#   # grabo cada vez TODA la tabla en el loop mas externo\n",
+        "#   fwrite( tb_grid_search_detalle,\n",
+        "#           file = \"gridsearch_detalle.txt\",\n",
+        "#           sep = \"\\t\" )\n",
+        "# }"
       ],
       "metadata": {
         "id": "nMktXlxcue0z",
-        "outputId": "97bef33f-b6b3-4268-e6f7-77aaacb7f6f2",
+        "outputId": "310d48d5-01c2-40a8-c6e0-38716732b27a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  130  131  132  133  134  135  136  137  138  139  140  141  142  143  144  145  146  147  148  149  150  151  152  153  154  155  156  157  158  159  160  161  162  163  164  165  166  167  168  169  170  171  172  173  174  175  176  177  178  179  180  181  182  183  184  185  186  187  188  189  190  191  192  193  194  195  196  197  198  199  200  201  202  203  204  205  206  207  208  209  210  211  212  213  214  215  216  217  218  219  220  221  222  223  224  225  226  227  228  229  230  231  232  233  234  235  236  237  238  239  240  241  242  243  244  245  246  247  248  249  250  251  252  253  254  "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Arma Lista de parametros a evaluar\n",
+        "\n",
+        "param_search <- list()\n",
+        "param_i <- 1\n",
+        "for (vmax_depth in c(4, 5, 6, 7, 8, 10, 12, 14)) {\n",
+        "  for (vmin_split in seq(10, 1000, 50)) {\n",
+        "    for(vcp in c(-1, -0.5)) {\n",
+        "      for (vmin_bucket in c(round(vmin_split/2), round(vmin_split/2), round(vmin_split/2), round(vmin_split/10))) {\n",
+        "        param_search[[param_i]] <- list(\n",
+        "          cp=vcp,\n",
+        "          maxdepth=vmax_depth,\n",
+        "          minsplit=vmin_split,\n",
+        "          minbucket=vmin_bucket)\n",
+        "        param_i <- param_i + 1\n",
+        "      }\n",
+        "    }\n",
+        "  }\n",
+        "}\n",
+        "\n",
+        "## Divide la Lista para correr en paralelo en varios Colab\n",
+        "\n",
+        "param_search_n_splits <- 3\n",
+        "\n",
+        "param_search_splits <- split(param_search,\n",
+        "            f = cut(seq_along(param_search), param_search_n_splits, labels=FALSE)\n",
+        "      )\n",
+        "\n",
+        "\n",
+        "## Selecionamos SPLIT PARA CORRER EN ESTE COLAB\n",
+        "\n",
+        "PARAM_SEARCH_SPLIT <- 1\n",
+        "\n",
+        "## Corremos entrenamiento en el split seleccionado\n",
+        "\n",
+        "param_search <- param_search_splits[[PARAM_SEARCH_SPLIT]]\n",
+        "\n",
+        "\n",
+        "param_filename <- sprintf(\"gridsearch_detalle_%02d.txt\", PARAM_SEARCH_SPLIT)\n",
+        "\n",
+        "iter <- 0\n",
+        "\n",
+        "for (params in param_search)\n",
+        "{\n",
+        "\n",
+        "\n",
+        "  iter <- iter + 1\n",
+        "  cat( iter, \" \" )\n",
+        "  flush.console()\n",
+        "\n",
+        "  # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
+        "  param_basicos <- list(\n",
+        "    \"cp\" = params$cp, # complejidad minima\n",
+        "    \"maxdepth\" = params$maxdepth, # profundidad máxima del arbol\n",
+        "    \"minsplit\" = params$minsplit, # tamaño minimo de nodo para hacer split\n",
+        "    \"minbucket\" = params$minbucket # minima cantidad de registros en una hoja\n",
+        "  )\n",
+        "\n",
+        "  # Un solo llamado, con la semilla 17\n",
+        "  ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "\n",
+        "  # agrego a la tabla\n",
+        "  tb_grid_search_detalle <- rbindlist(\n",
+        "    list( tb_grid_search_detalle,\n",
+        "          rbindlist(ganancias) )\n",
+        "  )\n",
+        "\n",
+        "  fwrite( tb_grid_search_detalle,\n",
+        "          file = param_filename,\n",
+        "          sep = \"\\t\" )\n",
+        "\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gz01YiGpB31E",
+        "outputId": "71843549-780f-47ec-cce3-b1bd62ef7f24"
+      },
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
