--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -550,46 +550,30 @@
         "# genero la data.table donde van los resultados detallados del Grid Search\n",
         "# un registro para cada combinacion de < semilla, parametros >\n",
         "\n",
-        "if(file.exists(\"gridsearch_detalle.txt\")){\n",
-        "  tb_grid_search_detalle <- fread(\"gridsearch_detalle.txt\")\n",
-        "}else{\n",
-        "  tb_grid_search_detalle <- data.table(\n",
-        "    semilla = integer(),\n",
-        "    cp = numeric(),\n",
-        "    maxdepth = integer(),\n",
-        "   minsplit = integer(),\n",
-        "    minbucket = integer(),\n",
-        "    ganancia_test = numeric()\n",
-        "  )\n",
-        "}\n",
+        "verifica_tabla_detalles <- function(filename = \"gridsearch_detalle.txt\") {\n",
         "\n",
-        "nrow( tb_grid_search_detalle )"
+        "\tif(file.exists(filename)){\n",
+        "\t  tb_grid_search_detalle <- fread(filename)\n",
+        "\t}else{\n",
+        "\t  tb_grid_search_detalle <- data.table(\n",
+        "\t\tsemilla = integer(),\n",
+        "\t\tcp = numeric(),\n",
+        "\t\tmaxdepth = integer(),\n",
+        "\t    minsplit = integer(),\n",
+        "\t\tminbucket = integer(),\n",
+        "\t\tganancia_test = numeric()\n",
+        "\t  )\n",
+        "\t}\n",
+        "\n",
+        "\tnrow( tb_grid_search_detalle )\n",
+        "\n",
+        "}"
       ],
       "metadata": {
-        "id": "xxCAwIKyIaTl",
-        "outputId": "3956c50b-1791-4fda-9579-5681b2d0f4ff",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "xxCAwIKyIaTl"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "1195"
-            ],
-            "text/markdown": "1195",
-            "text/latex": "1195",
-            "text/plain": [
-              "[1] 1195"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -923,6 +907,8 @@
         "\n",
         "param_filename <- sprintf(\"gridsearch_detalle_%02d.txt\", PARAM_SEARCH_SPLIT)\n",
         "\n",
+        "verifica_tabla_detalles (filename = param_filename)\n",
+        "\n",
         "iter <- 0\n",
         "\n",
         "for (params in param_search)\n",
@@ -961,9 +947,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gz01YiGpB31E",
-        "outputId": "71843549-780f-47ec-cce3-b1bd62ef7f24"
+        "outputId": "73e30105-e569-4d76-ce1e-de275ccd3dc5"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
