--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -185,7 +185,7 @@
       ],
       "metadata": {
         "id": "ilEZ-bE2VybW",
-        "outputId": "293d64b4-bad7-41ce-93cb-1252ae2f7e32",
+        "outputId": "a1cbf69b-b586-4e8c-d918-d9bb94695895",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -252,7 +252,7 @@
       ],
       "metadata": {
         "id": "W8dQFI5QYCFa",
-        "outputId": "b9d6be5c-67b6-45d2-a008-db8e1cef1759",
+        "outputId": "5c7623ff-7bed-47a4-f3b9-45bd3280b904",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -287,7 +287,7 @@
       ],
       "metadata": {
         "id": "oZG_4br6szlT",
-        "outputId": "bf40cac8-446d-4211-a920-5a8452ce1e76",
+        "outputId": "ab140802-553f-41ba-a06e-dcde8718b994",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -305,16 +305,16 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454451</td><td>77.7</td><td>1326120</td><td>70.9</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 657244</td><td>35.2</td><td>1454465</td><td>77.7</td><td>1326115</td><td>70.9</td></tr>\n",
               "\t<tr><th scope=row>Vcells</th><td>1220271</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454451 | 77.7 | 1326120 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454451 & 77.7 & 1326120 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  657244 | 35.2 | 1454465 | 77.7 | 1326115 | 70.9 |\n| Vcells | 1220271 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  657244 & 35.2 & 1454465 & 77.7 & 1326115 & 70.9\\\\\n\tVcells & 1220271 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  657244 35.2 1454451    77.7 1326120  70.9\n",
+              "Ncells  657244 35.2 1454465    77.7 1326115  70.9\n",
               "Vcells 1220271  9.4 8388608    64.0 1975128  15.1"
             ]
           },
@@ -337,7 +337,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b22a53bb-453c-4ac9-e729-c87f9bd21d9d"
+        "outputId": "0827ddfa-3ebd-453e-852e-94b811974e83"
       },
       "execution_count": 2,
       "outputs": [
@@ -389,7 +389,7 @@
       "metadata": {
         "id": "Vt5fC6bWHu5r"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "Z1dchsrWH4MD"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -471,7 +471,7 @@
       "metadata": {
         "id": "xsHwS1CzIA70"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -494,7 +494,7 @@
       "metadata": {
         "id": "BvBVOuhqIEjD"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -510,7 +510,7 @@
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -549,6 +549,7 @@
       "source": [
         "# genero la data.table donde van los resultados detallados del Grid Search\n",
         "# un registro para cada combinacion de < semilla, parametros >\n",
+        "tb_grid_search_detalle <- NULL\n",
         "\n",
         "verifica_tabla_detalles <- function(filename = \"gridsearch_detalle.txt\") {\n",
         "\n",
@@ -567,12 +568,13 @@
         "\n",
         "\tnrow( tb_grid_search_detalle )\n",
         "\n",
+        "\ttb_grid_search_detalle\n",
         "}"
       ],
       "metadata": {
         "id": "xxCAwIKyIaTl"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -637,7 +639,7 @@
       "metadata": {
         "id": "ipLHm3STIfmb"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -854,7 +856,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,8 +909,6 @@
         "\n",
         "param_filename <- sprintf(\"gridsearch_detalle_%02d.txt\", PARAM_SEARCH_SPLIT)\n",
         "\n",
-        "verifica_tabla_detalles (filename = param_filename)\n",
-        "\n",
         "iter <- 0\n",
         "\n",
         "for (params in param_search)\n",
@@ -944,18 +944,28 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 268
         },
         "id": "gz01YiGpB31E",
-        "outputId": "73e30105-e569-4d76-ce1e-de275ccd3dc5"
+        "outputId": "7bfd8fae-f855-4f6b-8304-fd37e1317a48"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "1  "
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ERROR",
+          "evalue": "Error: object 'tb_grid_search_detalle' not found\n",
+          "traceback": [
+            "Error: object 'tb_grid_search_detalle' not found\nTraceback:\n",
+            "1. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"object 'tb_grid_search_detalle' not found\", base::quote(eval(expr, \n .     envir)))"
           ]
         }
       ]
