--- a/src/rpart/290_TareaHogar_02.ipynb
+++ b/src/rpart/290_TareaHogar_02.ipynb
@@ -919,6 +919,8 @@
         "  cat( iter, \" \" )\n",
         "  flush.console()\n",
         "\n",
+        "  if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
+        "\n",
         "  # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
         "  param_basicos <- list(\n",
         "    \"cp\" = params$cp, # complejidad minima\n",
@@ -943,32 +945,10 @@
         "}"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 268
-        },
-        "id": "gz01YiGpB31E",
-        "outputId": "7bfd8fae-f855-4f6b-8304-fd37e1317a48"
+        "id": "gz01YiGpB31E"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1  "
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ERROR",
-          "evalue": "Error: object 'tb_grid_search_detalle' not found\n",
-          "traceback": [
-            "Error: object 'tb_grid_search_detalle' not found\nTraceback:\n",
-            "1. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"object 'tb_grid_search_detalle' not found\", base::quote(eval(expr, \n .     envir)))"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
